# learn-wgpu

./: Cargo.toml  index.html  todos.md
src/: camera.rs  instance.rs  lib.rs  shader.wgsl  state.rs
src/circle/: circle.rs  circle.wgsl  mod.rs
src/line/: line.rs  line.wgsl  mod.rs
src/rect/: mod.rs  rect.rs  rect.wgsl
