[package]
name = "wgpu-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wgpu-sandbox"
path = "src/main.rs"

[dependencies]
cfg-if = "1"
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
pollster = "0.2.5"
bytemuck = { version = "1.4", features = ["derive"] }
cgmath = "0.18"
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.12", features = ["webgl"] }
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.53", features = ["Document", "Window", "Element"] }


[lib]
crate-type = ["cdylib", "rlib"]
